<?xml version="1.0"?>
<package format="2">
  <name>pa1</name>
  <version>2.2.3</version>
  <description>
    Assingment 1: "Robot Sensors" for COSC 169 Robotics Perception Systems
  </description>

  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>
  <author email="monika.roznere.gr@dartmouth.edu">Monika Roznere</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
